--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button>Login</button>
     </div>
 
+    <div class="gioco-dei-dadi">
+        <button id="dice">Tira i dadi</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
