horrible colors added

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="login t-center">
-        <h1>Inserisci email</h1>
-        <input type="mail">
-        <button>Login</button>
+    <div class="container column a-center">
+        <div class="login t-center column">
+            <h1>Inserisci email</h1>
+            <input type="mail">
+            <button>Login</button>
+        </div>
+    
+        <div class="gioco-dei-dadi column">
+            <button id="dice">Tira i dadi</button>
+        </div>
     </div>
-
-    <div class="gioco-dei-dadi">
-        <button id="dice">Tira i dadi</button>
-    </div>
+    
 
     <script src="script.js"></script>
 </body>
